fix-nav-alignment

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,10 @@ footer {
     color: white;
 }
 
+.btn-group a {
+    color: white;
+}
+
 .about_text {
     padding-block: 1em;
 }
